# web

./: ABOBA.txt
stepik-django-main/: README.md  db.sqlite3  pyproject.toml  setup.cfg
stepik-django-main/app1/: admin.py  apps.py  middleware.py  models.py  serializers.py  services.py  signals.py  views.py
stepik-django-main/app1/migrations/: 0001_initial.py  0002_author_item_is_active_book.py
stepik-django-main/config/: settings.py  urls.py
webproject/: webproject.sln
webproject/django/: db.sqlite3  pyproject.toml
webproject/django/aboba/: asgi.py  settings.py  urls.py  wsgi.py
webproject/webproject/: webproject.pyproj
